WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59480
InlineBox.h shouldn't include RenderBR.h
https://bugs.webkit.org/show_bug.cgi?id=59480
Summary
InlineBox.h shouldn't include RenderBR.h
Mihai Parparita
Reported
2011-04-26 12:05:04 PDT
InlineBox.h shouldn't include RenderBR.h
Attachments
Patch
(2.12 KB, patch)
2011-04-26 12:06 PDT
,
Mihai Parparita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihai Parparita
Comment 1
2011-04-26 12:06:41 PDT
Created
attachment 91141
[details]
Patch
Nico Weber
Comment 2
2011-04-26 13:05:15 PDT
Cool! You could add something like "this reduces the size of InlineBox.h by XXX kB" to the ChangeLog entry. You get the XXX from eric's script attached to
bug 59348
.
Mihai Parparita
Comment 3
2011-04-26 14:06:50 PDT
Before: Source/WebCore/rendering/InlineBox.h: 0.917 247 226.499000 (from
bug 59348
) After: Source/WebCore/rendering/InlineBox.h: 0.906 247 223.782000 So it's only 11K in the .h file, and 3MB across all the includes?
Nico Weber
Comment 4
2011-04-26 14:11:43 PDT
Looks like it. Probably because InlineBox.h and RenderBR.h include similar files. :-/
WebKit Commit Bot
Comment 5
2011-04-26 14:22:07 PDT
Comment on
attachment 91141
[details]
Patch Clearing flags on attachment: 91141 Committed
r84956
: <
http://trac.webkit.org/changeset/84956
>
WebKit Commit Bot
Comment 6
2011-04-26 14:22:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug