2011-04-26  Mihai Parparita  <mihaip@chromium.org>

Reviewed by Eric Seidel.

        InlineBox.h shouldn't include RenderBR.h
        https://bugs.webkit.org/show_bug.cgi?id=59480

        Per bug 59348 RenderBR.h is a "top header" by include * size, because
        InlineBox.h includes it. There's no reason why it has to.

        * rendering/InlineBox.h:
        * rendering/InlineTextBox.cpp:
        * rendering/RenderBlock.h:

Canonical link: https://commits.webkit.org/74678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84956 268f45cc-cd09-0410-ab3c-d52691b4dbfc